[package]
authors = ["Christian Meusel <christian.meusel@posteo.de>"]
name = "dioxide"
edition = "2018"
version = "0.1.0"

[dependencies]
cfg-if = "1.0.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
crc_all = "0.2.2"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
embedded-vintage-fonts = "0.1.0"
epd-waveshare = "0.5.0"
heapless = "0.7.16"
nrf52840-hal = "0.16.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
profont = "0.6.1"
sh1106 = "0.4.0"
shared-bus = "0.2.5"
switch-hal = "0.4.0"

[features]
display-4in2 = []
display-2in9_v2 = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
